# internal/server/http.go
@@ -5,6 +5,7 @@ import (
 
 	auth_v1 "iam/api/auth/v1"
 	privacy_v1 "iam/api/privacy/v1"
+	settings_v1 "iam/api/settings/v1"
 	users_v1 "iam/api/users/v1"
 	"iam/internal/conf"
 	"iam/internal/data"
@@ -33,7 +34,7 @@ func NewWhiteListMatcher() selector.MatchFunc {
 }
 
 // NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *conf.Bootstrap, logger log.Logger, jwtp *data.JwtProcessor, auth *service.AuthService, users *service.UsersService, privacy *service.PrivacyService) *khttp.Server {
+func NewHTTPServer(c *conf.Bootstrap, logger log.Logger, jwtp *data.JwtProcessor, auth *service.AuthService, users *service.UsersService, privacy *service.PrivacyService, settings *service.SettingsService) *khttp.Server {
 	var opts = []khttp.ServerOption{
 		khttp.Middleware(
 			recovery.Recovery(),
@@ -61,6 +62,7 @@ func NewHTTPServer(c *conf.Bootstrap, logger log.Logger, jwtp *data.JwtProcessor
 	auth_v1.RegisterAuthHTTPServer(srv, auth)
 	users_v1.RegisterUsersHTTPServer(srv, users)
 	privacy_v1.RegisterPrivacyHTTPServer(srv, privacy)
+	settings_v1.RegisterSettingsHTTPServer(srv, settings)
 
 	return srv
 }
